<resources>
    <string name="app_name">invited</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">新增活動</string>
    <string name="menu_gallery">簽到</string>
    <string name="menu_slideshow">刪除活動</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="eventname">活動名稱</string>
    <string name="enter">輸入</string>
    <string name="joinnumber">參加人數</string>
    <string name="joinname">姓名</string>
    <string name="event">活動名稱</string>
    <string name="error">no nfc</string>
    <string name="no_nfc">error</string>
    <string name="id">id</string>
    <string name="arrive">簽到</string>
    <string name="back">返回</string>
</resources>
